3 hour limit, prevent portal, blackboard kick

--- a/_release/popup/popup.css
+++ b/_release/popup/popup.css
@@ -27,7 +27,7 @@ html, body {
 	align-items: stretch;
 }
 
-#value-samaks, #value-kmitb {
+#value-samaks, #value-kmitb, #value-uptlb {
 	width: 64px;
 }
 
